Updated project files

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Centra | Digital Marketing Agency</title>
-    <meta name="description" content="Centra - Connecting Brands with Powerful Digital Voices" />
-    <meta name="author" content="Centra" />
+    <title>DNA | Digital Marketing Agency</title>
+    <meta name="description" content="DNA - Connecting Brands with Powerful Digital Voices" />
+    <meta name="author" content="DNA" />
 
-    <meta property="og:title" content="Centra | Digital Marketing Agency" />
+    <meta property="og:title" content="DNA | Digital Marketing Agency" />
     <meta property="og:description" content="Connecting Brands with Powerful Digital Voices" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@centra" />
+    <meta name="twitter:site" content="@DNA" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
