--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,11 +12,11 @@
     <meta property="og:title" content="DNA | Digital Marketing Agency" />
     <meta property="og:description" content="Connecting Brands with Powerful Digital Voices" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/1.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@DNA" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/lovable-uploads/1.png" />
   </head>
 
   <body>
