--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       fbq('init', '1699670274002302');
       fbq('track', 'PageView');
     </script>
-    <noscript>
-      <img height="1" width="1" style="display:none"
+    <!-- <noscript>
+      <img height="1" width="1" style="display:none;"
         src="https://www.facebook.com/tr?id=1699670274002302&ev=PageView&noscript=1"
       />
-    </noscript>
+    </noscript> -->
     <!-- End Meta Pixel Code -->
   </head>
 
